--- a/otter-book/tsconfig.json
+++ b/otter-book/tsconfig.json
@@ -9,6 +9,7 @@
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "strict": true,
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
@@ -17,7 +18,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "schema-flat-drawer": [
+        "dist/schema-flat-drawer/schema-flat-drawer",
+        "dist/schema-flat-drawer"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
